# site-feasibility-workbench-open

./: .env.example  .gitignore  CODEOWNERS.txt  CONTRIBUTING.md  LICENSE  LICENSE.md  NOTICE.md  README.md  app.py  app.yaml  databricks.yml  deploy.sh  env.example  install.sh  pyproject.toml  requirements.txt  setup.sh
.github/: dependabot.yml
.github/scripts/: export_databricks_notebooks.py
.github/workflows/: ci.yml  databricks-ci.yml  publish.yaml  release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  FeasibilityAssistant.tsx  IndicationFilter.tsx  StatsBar.tsx  TrialMap.tsx  WizardProgress.tsx
frontend/src/components/wizard/: ProtocolGenieChat.tsx  Step1Protocol.tsx  Step2Constraints.tsx  Step3Map.tsx  Step4Ranking.tsx  Step5DeepDive.tsx  Step6Shortlist.tsx
frontend/src/pages/: FeasibilityView.tsx  WizardApp.tsx
notebooks/: 00_seed_data.py  01_create_genie_space.py  02_train_site_model.py  README.md
scripts/: cleanup.sh
server/: config.py  db.py  lakebase_init.py
server/routes/: assessments.py  chat.py  feasibility.py  genie_chat.py  indications.py  map_data.py  patient_data.py  protocols.py
